--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
   <title>poeun</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="favicon.ico">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="images/poeun-modified.png" alt="Hyunseok profile picture" width="200"></td>
-      <td>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-lg-12 text-center">
+        <img src="images/poeun-modified.png" alt="Hyunseok profile picture" width="200">
         <h1>Hyunseok Jung (poeun)</h1>
         <p><em>
-            Graduate studnet at <strong>AJOU</strong> University
-          </em></p>
+          Graduate studnet at <strong>AJOU</strong> University
+        </em></p>
         <br>
         <p>
           I am an Big-Data Engineer 🧨 and AI Enthusiast 🔅 <br>Github Pages : <a href="https://ingu627.github.io">ingu627.github.io</a>
@@ -31,178 +32,175 @@
           <a href="mailto:rjsdudans@naver.com">
             <img src=https://img.shields.io/badge/Gmail-d14836?style=flat-square&logo=Gmail&logoColor=white&link=mailto:rjsdudans@naver.com>
           </a>
+      </div>
+    </div>
+      <hr size="3" noshape>
+    <div class="row">
+      <div class="col-6">
+        <table cellspacing="10">
+          <tr>
+            <td><img width='100' src='https://user-images.githubusercontent.com/78655692/165667340-bccb75ea-4605-4519-a3dd-2b14a2ccdd55.png'></td>
+            <td><strong><a href="https://ajou.ac.kr">Ajou University</a></strong><br> Mar. 2015 ~ Aug. 2021 <br> Department of Industrial Engineering <br> Double major in Industrial Engineering and Psychology <br> Suwon, Korea</td>
+          </tr>
+        </table>
+        <table cellspacing="10">
+          <tr>
+            <td><img width='100' src='https://user-images.githubusercontent.com/78655692/165667340-bccb75ea-4605-4519-a3dd-2b14a2ccdd55.png'></td>
+            <td><strong><a href="https://ajou.ac.kr">Ajou University</a></strong><br> Mar. 2022 ~ Present<br> Department of Artificial Intelligence<br>Major in Artificial Intelligence<br>Advisor: Sangyoon Oh<br>Master Student<br>Suwon, Korea</td>
+          </tr>
+        </table>
+      </div>
+      <div class="col-6">
+        <h3>Research Interests</h3>
+        <ul>
+          <li>Large Scale Graph Processing</li>
+          <li>Big Data Processing</li>
+          <li>Distributed Deep Learning</li>
+          <li>MLOps</li>
+        </ul>
+      </div>
+      <hr size="3" noshape>
+      <div class="row">
+        <h3>Research Experience</h3>
+        <h4>Ajou University</h4>
+        <ul>
+          <li>Undergraduate Student | Advisor: Junsoon Jang, Ph.D. March 2021 ~ June 2021 </li>
+          <ul>
+            <li>Predicting the remaining life of bearings through PHM(Prognostics and Health Management)</li>
+            <ul>
+              <li>FPT was derived using LSTM algorithm using bearing vibration information of NASA FEMTO Bearing Data. After that, the time of failure was predicted using the EM model.</li>
+            </ul>
+          </ul>
+        </ul>
+        <ul>
+          <li>Graduate Student | Advisor: Sangyoon Oh, Ph.D. March 2022 ~ April 2022</li>
+          <ul>
+            <li>Resolving Data Drift in Disaster Response Model using MLOps based Adaptation</li>
+          </ul>
+        </ul>
+        <h4>Multicampus</h4>
+        <ul>
+          <li>Student | June 2021 ~ September 2021</li>
+          <ul>
+            <li>TOEIC score prediction using Riiid data</li>
+            <ul>
+              <li>After finding data in kaggle competition and proceed with preprocessing after EDA work. And calculate the f1-score using the logistic regression analysis.</li>
+            </ul>
+            <li>Sentiment analysis after natural language processing of news from each country on the corona vaccine</li>
+            <li>Creating a chatbot using seq2seq2 model</li>
+          </ul>
+        </ul>
+        <hr size="3" noshape>
+        <div class="row">
+          <h3>Certificates</h3>
+          <h4>National Technical Qualitifcation</h4>
+          <table cellspacing="10">
+            <thead>
+            <tr>
+              <th>Full name</th>
+              <th>Date</th>
+              <th>Name</th>
+            </tr>
+            </thead>
+            <tr>
+              <td>Big-Data Analysis Engineer</td>
+              <td>2021.12</td>
+              <td>빅데이터분석기사</td>
+            </tr>
+            <tr>
+              <td>Engineer Quality Management</td>
+              <td>2021.06</td>
+              <td>품질경영기사</td>
+            </tr>
+            <tr>
+              <td>Survey Analyst, Junior</td>
+              <td>2020.11</td>
+              <td>사회조사분석사 2급</td>
+            </tr>
+            <tr>
+              <td>Korean History Proficiency Test</td>
+              <td>2020.08</td>
+              <td>한국사능력검정시험 2급</td>
+            </tr>
+          </table>
+          <h4>Accredited Private Qualification</h4>
+          <table cellspacing="10">
+            <thead>
+            <tr>
+              <th>Full name</th>
+              <th>Date</th>
+              <th>Name</th>
+            </tr>
+            </thead>
+            <tr>
+              <td>Advanced Data Analytics Semi-Professional</td>
+              <td>2021.06</td>
+              <td>ADsP</td>
+            </tr>
+            <tr>
+              <td>Structured Query Language Developer</td>
+              <td>2021.10</td>
+              <td>SQLD</td>
+            </tr>
+            <tr>
+              <td>6-SIGMA Green Belt</td>
+              <td>2021.02</td>
+              <td>6시그마 GB</td>
+            </tr>
+          </table>
+          <h4>Private Qualification</h4>
+          <table cellspacing="10">
+            <thead>
+            <tr>
+              <th>Full name</th>
+              <th>Date</th>
+              <th>Name</th>
+            </tr>
+            </thead>
+            <tr>
+              <td>Artificial Intelligence of Things</td>
+              <td>2021.01</td>
+              <td>AIoT</td>
+            </tr>
+            <tr>
+              <td>Data Scientist Academic Certification Expert</td>
+              <td>2021.01</td>
+              <td>DSAC 2급</td>
+            </tr>
+          </table>
+          <h4>International Qualification</h4>
+          <table cellspacing="10">
+            <thead>
+            <tr>
+              <th>Full name</th>
+              <th>Date</th>
+              <th>Name</th>
+            </tr>
+            </thead>
+            <tr>
+              <td>Azure AI Fundamentals</td>
+              <td>2021.12</td>
+              <td>AI-900</td>
+            </tr>
+            <tr>
+              <td>Azure Fundamentals</td>
+              <td>2022.01</td>
+              <td>AZ-900</td>
+            </tr>
+            <tr>
+              <td>Azure Data Fundamentals</td>
+              <td>2022.03</td>
+              <td>AD-900</td>
+            </tr>
+            <tr>
+              <td>Google Analytics Individual Qualification</td>
+              <td>2021.09</td>
+              <td>GAIQ</td>
+            </tr>
+          </table>
         </div>
-        </p>
-      </td>
-    </tr>
-  </table>
-
-  <br>
-  <hr size="3" noshape>
-  <h3>Research Interests</h3>
-  <ul>
-    <li>Large Scale Graph Processing</li>
-    <li>Big Data Processing</li>
-    <li>Distributed Deep Learning</li>
-    <li>MLOps</li>
-  </ul>
-
-  <hr size="3" noshape>
-  <h3>
-    Education
-  </h3>
-  <table cellspacing="10">
-    <tr>
-      <td><img width='100' src='https://user-images.githubusercontent.com/78655692/165667340-bccb75ea-4605-4519-a3dd-2b14a2ccdd55.png'></td>
-      <td><strong><a href="https://ajou.ac.kr">Ajou University</a></strong><br> Mar. 2015 ~ Aug. 2021 <br> Department of Industrial Engineering <br> Double major in Industrial Engineering and Psychology <br> Suwon, Korea</td>
-    </tr>
-  </table>
-  <table cellspacing="10">
-    <tr>
-      <td><img width='100' src='https://user-images.githubusercontent.com/78655692/165667340-bccb75ea-4605-4519-a3dd-2b14a2ccdd55.png'></td>
-      <td><strong><a href="https://ajou.ac.kr">Ajou University</a></strong><br> Mar. 2022 ~ Present<br> Department of Artificial Intelligence<br>Major in Artificial Intelligence<br>Advisor: Sangyoon Oh<br>Master Student<br>Suwon, Korea</td>
-    </tr>
-  </table>
-
-  <hr size="3" noshape>
-  <h3>Research Experience</h3>
-  <h4>Ajou University</h4>
-  <ul>
-    <li>Undergraduate Student | Advisor: Junsoon Jang, Ph.D. March 2021 ~ June 2021 </li>
-    <ul>
-      <li>Predicting the remaining life of bearings through PHM(Prognostics and Health Management)</li>
-      <ul>
-        <li>FPT was derived using LSTM algorithm using bearing vibration information of NASA FEMTO Bearing Data. After that, the time of failure was predicted using the EM model.</li>
-      </ul>
-    </ul>
-  </ul>
-  <ul>
-    <li>Graduate Student | Advisor: Sangyoon Oh, Ph.D. March 2022 ~ April 2022</li>
-    <ul>
-      <li>Resolving Data Drift in Disaster Response Model using MLOps based Adaptation</li>
-    </ul>
-  </ul>
-  <h4>Multicampus</h4>
-  <ul>
-    <li>Student | June 2021 ~ September 2021</li>
-    <ul>
-      <li>TOEIC score prediction using Riiid data</li>
-      <ul>
-        <li>After finding data in kaggle competition and proceed with preprocessing after EDA work. And calculate the f1-score using the logistic regression analysis.</li>
-      </ul>
-      <li>Sentiment analysis after natural language processing of news from each country on the corona vaccine</li>
-      <li>Creating a chatbot using seq2seq2 model</li>
-    </ul>
-  </ul>
-  <hr size="3" noshape>
-
-
-  <h3>Certificates</h3>
-  <h4>National Technical Qualitifcation</h4>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Date</th>
-        <th>Korea Name</th>
-      </tr>
-    </thead>
-    <tr>
-      <td>Big-Data Analysis Engineer</td>
-      <td>2021.12</td>
-      <td>빅데이터분석기사</td>
-    </tr>
-    <tr>
-      <td>Engineer Quality Management</td>
-      <td>2021.06</td>
-      <td>품질경영기사</td>
-    </tr>
-    <tr>
-      <td>Survey Analyst, Junior</td>
-      <td>2020.11</td>
-      <td>사회조사분석사 2급</td>
-    </tr>
-    <tr>
-      <td>Korean History Proficiency Test</td>
-      <td>2020.08</td>
-      <td>한국사능력검정시험 2급</td>
-    </tr>
-  </table>
-  <h4>Accredited Private Qualification</h4>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Full name</th>
-        <th>Date</th>
-        <th>Name</th>
-      </tr>
-    </thead>
-    <tr>
-      <td>Advanced Data Analytics Semi-Professional</td>
-      <td>2021.06</td>
-      <td>ADsP</td>
-    </tr>
-    <tr>
-      <td>Structured Query Language Developer</td>
-      <td>2021.10</td>
-      <td>SQLD</td>
-    </tr>
-    <tr>
-      <td>6-SIGMA Green Belt</td>
-      <td>2021.02</td>
-      <td>6시그마 GB</td>
-    </tr>
-  </table>
-  <h4>Private Qualification</h4>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Full name</th>
-        <th>Date</th>
-        <th>Name</th>
-      </tr>
-    </thead>
-    <tr>
-      <td>Artificial Intelligence of Things</td>
-      <td>2021.01</td>
-      <td>AIoT</td>
-    </tr>
-    <tr>
-      <td>Data Scientist Academic Certification Expert</td>
-      <td>2021.01</td>
-      <td>DSAC 2급</td>
-    </tr>
-  </table>
-  <h4>International Qualification</h4>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Full name</th>
-        <th>Date</th>
-        <th>Name</th>
-      </tr>
-    </thead>
-    <tr>
-      <td>Azure AI Fundamentals</td>
-      <td>2021.12</td>
-      <td>AI-900</td>
-    </tr>
-    <tr>
-      <td>Azure Fundamentals</td>
-      <td>2022.01</td>
-      <td>AZ-900</td>
-    </tr>
-    <tr>
-      <td>Azure Data Fundamentals</td>
-      <td>2022.03</td>
-      <td>AD-900</td>
-    </tr>
-    <tr>
-      <td>Google Analytics Individual Qualification</td>
-      <td>2021.09</td>
-      <td>GAIQ</td>
-    </tr>
-  </table>
+      </div>
+  </div>
 
   <hr size="3" noshape>
   <h3>Skills</h3>
@@ -247,6 +245,8 @@
     <a href="contact_me.html">Contact me</a>
     <a href="inputs.html">HTML inputs</a>
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 
 </html>
